fivicon implementation and content update

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Medical Center</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://kit.fontawesome.com/3898b48e94.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="assets/images/icon.png" type="image/x-icon">
 </head>
 
 <body>
@@ -19,11 +20,11 @@
             <div class="menu">
                 <nav>
                     <ul>
-                        <li class="active"><a href="#">HOME</a></li>
-                        <li><a href="#">HOME</a></li>
-                        <li><a href="#">HOME</a></li>
-                        <li><a href="#">HOME</a></li>
-                        <li><a href="#">HOME</a></li>
+                        <li class="active"><a href="#">Home</a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#">Department</a></li>
+                        <li><a href="#">Agenda</a></li>
+                        <li><a href="#">About Us</a></li>
                     </ul>
                 </nav>
             </div>
@@ -83,25 +84,24 @@
                         <article>
                             <a href="#">
                                 <div class="news_data">
-                                    <div class="news_posted_at">01 SET 22</div>
+                                    <div class="news_posted_at">03 SET 22</div>
                                     <div class="news_coments">2</div>
                                 </div>
                                 <div class="thumb_news">
                                     <img src="assets/images/rinoplastia.png" alt="">
                                 </div>
-                                <div class="news_title">A Rinosseptoplastia</div>
+                                <div class="news_title">Rhinoseptoplasty</div>
                                 <div class="news_resume">
-                                    tem um preço médio de R$ 14.000, mas vai depender do hospital,
-                                    do médico e do tipo de cirurgia realizado. Deve-se prestar atenção a todos os
-                                    cuidados necessários no pré e pós operatórios, o sucesso do procedimento depende
-                                    em grande parte da dedicação por parte do paciente.
+                                    has an average price of $14,000, but it will depend on the hospital, the doctor, and the type of surgery 
+                                    performed. Attention must be paid to all the necessary pre and post-operative care; the success of the procedure 
+                                    depends to a large extent on the patient's dedication.
                                 </div>
                             </a>
                         </article>
                         <article>
                             <a href="#">
                                 <div class="news_data">
-                                    <div class="news_posted_at">01 SET 22</div>
+                                    <div class="news_posted_at">03 SET 22</div>
                                     <div class="news_coments">2</div>
                                 </div>
                                 <div class="thumb_news">
@@ -109,49 +109,43 @@
                                 </div>
                                 <div class="news_title">Lipo HD</div>
                                 <div class="news_resume">
-                                    A lipo HD é uma evolução da lipoaspiração convencional, indicada para homens
-                                    e mulheres que desejam um corpo com mais definição. Mais do que remover o excesso
-                                    de gordura localizada, essa nova tendência transforma a clássica lipoaspiração em
-                                    uma
-                                    técnica focada também na definição dos contornos musculares
+                                    HD liposuction is an evolution of conventional liposuction, indicated for men and women who want a body with more 
+                                    definition. More than just removing excess localized fat, this new trend transforms the classic liposuction into a
+                                    technique focused also in the definition of muscular contours.
                                 </div>
                             </a>
                         </article>
                         <article>
                             <a href="#">
                                 <div class="news_data">
-                                    <div class="news_posted_at">01 SET 22</div>
+                                    <div class="news_posted_at">04 SET 22</div>
                                     <div class="news_coments">2</div>
                                 </div>
                                 <div class="thumb_news">
                                     <img src="assets/images/cirurgiao.png" alt="">
                                 </div>
-                                <div class="news_title">Médico Cirurgião</div>
+                                <div class="news_title">Medical Surgeon</div>
                                 <div class="news_resume">
-                                    O cirurgião plástico é o médico especializado em tratar patologias e traumas e
-                                    buscar melhorias nas características estéticas de seus pacientes. Sua atuação pode
-                                    envolver o tratamento de problemas congênitos e de reparação, assim como o desejo de
-                                    mudança
-                                    da aparência física.
+                                    The plastic surgeon is the physician who specializes in treating pathologies and traumas and
+                                    seeking improvements in the aesthetic characteristics of their patients. His work can involve 
+                                    the treatment of congenital and repair problems, as well as the desire for change physical appearance.
                                 </div>
                             </a>
                         </article>
                         <article>
                             <a href="#">
                                 <div class="news_data">
-                                    <div class="news_posted_at">01 SET 22</div>
+                                    <div class="news_posted_at">04 SET 22</div>
                                     <div class="news_coments">2</div>
                                 </div>
                                 <div class="thumb_news">
                                     <img src="assets/images/qualidade-protese.png" alt="">
                                 </div>
-                                <div class="news_title">Protese de qualidade</div>
+                                <div class="news_title">Quality prosthesis</div>
                                 <div class="news_resume">
-                                    No Brasil, o órgão que fiscaliza as próteses de silicone é a Anvisa -Agência
-                                    Nacional
-                                    de Vigilância Sanitária. Para aprovar cada lote, amostras passam por testes
-                                    rigorosos
-                                    feitos pelo Inmetro.
+                                    In Brazil, the body that oversees silicone prostheses is Anvisa -Agência Nacional
+                                    of Health Surveillance. To approve each lot, samples go through rigorous tests.
+                                    rigorous tests made by Inmetro.
                                 </div>
                             </a>
                         </article>
