--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <nav>
                     <ul>
                         <li class="active"><a href="#">Home</a></li>
-                        <li><a href="#"></a></li>
+                        <li><a href="#">Wellness and Health</a></li>
                         <li><a href="#">Department</a></li>
                         <li><a href="#">Agenda</a></li>
                         <li><a href="#">About Us</a></li>
@@ -92,8 +92,10 @@
                                 </div>
                                 <div class="news_title">Rhinoseptoplasty</div>
                                 <div class="news_resume">
-                                    has an average price of $14,000, but it will depend on the hospital, the doctor, and the type of surgery 
-                                    performed. Attention must be paid to all the necessary pre and post-operative care; the success of the procedure 
+                                    has an average price of $14,000, but it will depend on the hospital, the doctor, and
+                                    the type of surgery
+                                    performed. Attention must be paid to all the necessary pre and post-operative care;
+                                    the success of the procedure
                                     depends to a large extent on the patient's dedication.
                                 </div>
                             </a>
@@ -109,8 +111,10 @@
                                 </div>
                                 <div class="news_title">Lipo HD</div>
                                 <div class="news_resume">
-                                    HD liposuction is an evolution of conventional liposuction, indicated for men and women who want a body with more 
-                                    definition. More than just removing excess localized fat, this new trend transforms the classic liposuction into a
+                                    HD liposuction is an evolution of conventional liposuction, indicated for men and
+                                    women who want a body with more
+                                    definition. More than just removing excess localized fat, this new trend transforms
+                                    the classic liposuction into a
                                     technique focused also in the definition of muscular contours.
                                 </div>
                             </a>
@@ -126,9 +130,12 @@
                                 </div>
                                 <div class="news_title">Medical Surgeon</div>
                                 <div class="news_resume">
-                                    The plastic surgeon is the physician who specializes in treating pathologies and traumas and
-                                    seeking improvements in the aesthetic characteristics of their patients. His work can involve 
-                                    the treatment of congenital and repair problems, as well as the desire for change physical appearance.
+                                    The plastic surgeon is the physician who specializes in treating pathologies and
+                                    traumas and
+                                    seeking improvements in the aesthetic characteristics of their patients. His work
+                                    can involve
+                                    the treatment of congenital and repair problems, as well as the desire for change
+                                    physical appearance.
                                 </div>
                             </a>
                         </article>
@@ -155,7 +162,7 @@
             <aside>
                 <div class="widget">
                     <div class="widget_title">
-                        <div class="widget_title_text">Deparments</div>
+                        <div class="widget_title_text">Departments</div>
                         <div class="widget_title_bar"></div>
                     </div>
                     <div class="widget_body">
@@ -172,24 +179,24 @@
                         <div class="widget_title_text">Make An appointment</div>
                         <div class="widget_title_bar"></div>
                     </div>
-                    <div >
+                    <div>
                         <div class="contact_us">
                             <div class="description_agenda">
                                 Online and in-person consultations, exams, and discounts on medications.
                             </div>
                             <div class="card_contact contact">
                                 <i class="fa-brands fa-square-whatsapp"></i>
-                                <a href="">                                   
+                                <a href="">
                                     <span> By Phone | WhatsApp: <span class="phone">+82 99245-5656</span></span>
                                 </a>
                             </div>
-                            <div class="card_contact">                                
+                            <div class="card_contact">
                                 <i class="fa-solid fa-envelope"></i>
                                 <a href="">
                                     <span>By e-mail: <span class="underline">medicenter@medicenter.com</span></span>
                                 </a>
                             </div>
-                            <div class="card_contact">                                
+                            <div class="card_contact">
                                 <i class="fa-solid fa-calendar-days"></i>
                                 <a href="">
                                     <span class="underline">Or fill in the form</span>
@@ -203,6 +210,160 @@
             </aside>
         </div>
     </section>
-</body>
 
-/html>
+    <footer>
+        <div class="container flexColumn">
+            <div class="footer_menu">
+                <div class="fm_1">
+                    <a href="">
+                        <div class="link_footer">
+                            <div class="link_footer_title">Health Insurance</div>
+                            <div class="footer_link_iconic">
+                                <p>Here in medicenter we have invidual</p>
+                                <i class="fa-solid fa-arrow-right-from-bracket"></i>
+                            </div> 
+                        </div>                       
+                     </a>
+                </div>
+                <div class="fm_2">
+                    <a href="">
+                        <div class="link_footer">
+                            <div class="link_footer_title">Medical Records</div>
+                            <div class="footer_link_iconic">
+                                <p>Here in medicenter we have invidual</p>
+                                <i class="fa-solid fa-arrow-right-from-bracket"></i>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="fm_3">
+                    <a href="">
+                        <div class="link_footer">
+                            <div class="link_footer_title">Online Bill Pay</div>
+                            <div class="footer_link_iconic">
+                                <p>Here in medicenter we have invidual</p>
+                                <i class="fa-solid fa-arrow-right-from-bracket"></i>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>  
+            <div class="footer_info">
+                <div class="footer_areaitem">
+                    <div class="widget">
+                        <div class="widget_title">
+                            <div class="widget_title_text">Medicenter Clinic</div>
+                            <div class="widget_title_bar"></div>
+                        </div>
+                        <div class="footer_informations">
+                            <div class="adress_title">
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                            </div>
+                            <div>
+                                <div class="footer_section_adress">
+                                    <div>
+                                        <span>Medicenter Clinic</span></br>
+                                        <span>33 Farlene Street</span></br>
+                                        <span>Keilor East</span></br>
+                                        <span>VICC 3033, Honk Kong</span>
+                                    </div>
+                                    <div>
+                                        <span>+123 655 655</span></br>
+                                        <span>+123 755 755</span></br>
+                                        <span>contact@medicenter.com</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="footer_section_icon_social">
+                                <a href=""> <i class="fa-brands fa-square-whatsapp"></i></a>
+                                <a href=""><i class="fa-brands fa-telegram"></i></a>
+                                <a href=""> <i class="fa-brands fa-instagram"></i></a>
+                                <a href=""> <i class="fa-brands fa-square-facebook"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer_areaitem">
+                    <div class="footer_areaitem">
+                        <div class="widget">
+                            <div class="widget_title">
+                                <div class="widget_title_text">Latest Post</div>
+                                <div class="widget_title_bar"></div>
+                            </div>
+                            <div class="footer_last_post">
+                                <div class="last_postagem">
+                                    <i class="fa-solid fa-arrow-right-from-bracket"></i>
+                                    <p>
+                                        Lorem Ipsum is simply dummy text of the printing 
+                                        and typesetting industry.</br>
+                                        <a href=""><span>@salsa</span></a>
+                                    </p>                                    
+                                </div>
+                                <div class="last_postagem">
+                                    <i class="fa-solid fa-arrow-right-from-bracket"></i>
+                                    <p>
+                                        Lorem Ipsum is simply dummy text of the printing 
+                                        and typesetting industry.</br>
+                                       <a href=""><span>@mos</span></a>
+                                    </p>                                    
+                                </div>
+                                <div class="last_postagem">
+                                    <i class="fa-solid fa-arrow-right-from-bracket"></i>
+                                    <p>
+                                        Lorem Ipsum is simply dummy text of the printing 
+                                        and typesetting industry.</br>
+                                        <a href=""><span>@scr</span></a>
+                                    </p>                                    
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer_areaitem">
+                    <div class="footer_areaitem">
+                        <div class="widget">
+                            <div class="widget_title">
+                                <div class="widget_title_text">About Us</div>
+                                <div class="widget_title_bar"></div>
+                            </div>
+                            <div class="footer_last_post about_text">
+                                <div class="last_postagem">
+                                    <i class="fa-solid fa-arrow-right-from-bracket"></i>
+                                    <p>
+                                        Lorem Ipsum is simply dummy text of the printing 
+                                        and typesetting industry. Lorem Ipsum has been the
+                                        industry's standard dummy.</br>
+                                        <a href=""><span>@salsa</span></a>
+                                    </p>                                    
+                                </div>
+                                <div class="last_postagem">
+                                    <i class="fa-solid fa-arrow-right-from-bracket"></i>
+                                    <p>
+                                        Lorem Ipsum is simply dummy text of the printing 
+                                        and typesetting industry. Lorem Ipsum has been the
+                                        industry's standard dummy.</br>
+                                       <a href=""><span>@mos</span></a>
+                                    </p>                                    
+                                </div>
+                                <div class="last_postagem">
+                                    <i class="fa-solid fa-arrow-right-from-bracket"></i>
+                                    <p>
+                                        Lorem Ipsum is simply dummy text of the printing 
+                                        and typesetting industry. Lorem Ipsum has been the
+                                        industry's standard dummy.</br>
+                                        <a href=""><span>@scr</span></a>
+                                    </p>                                    
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div> 
+            <div class="footer_copy">
+                Copyright - Todos os direitos reservados
+            </div>
+
+        </div>
+    </footer>
+</body>
+</html>
