add responsive mod

--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
             </div>
             <div class="menu">
                 <nav>
-                    <ul>
+                    <div class="menu_mobile" onclick="openmenu()">
+                        <div class="mm_line">.</div>
+                        <div class="mm_line">.</div>
+                        <div class="mm_line">.</div>
+                    </div>
+                    <ul id="menu">
                         <li class="active"><a href="#">Home</a></li>
                         <li><a href="#">Wellness and Health</a></li>
                         <li><a href="#">Department</a></li>
@@ -365,5 +370,7 @@
 
         </div>
     </footer>
+
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
